--- a/Foodies/Foodies/Base.lproj/Main_iPhone.storyboard
+++ b/Foodies/Foodies/Base.lproj/Main_iPhone.storyboard
@@ -493,9 +493,9 @@
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0qi-Xw-bHH" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="gZa-3l-4P7" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Feed" image="11B742CB-CC71-470A-A49A-99B8AFCB0F27" id="Mqs-XK-zNN"/>
+                    <tabBarItem key="tabBarItem" title="Feed" image="F8F9DC4E-448A-432E-AE21-265903E566CB" id="Mqs-XK-zNN"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="NSi-s2-Gmj" customClass="GTScrollNavigationBar">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="NSi-s2-Gmj" customClass="GTScrollNavigationBar">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -507,18 +507,18 @@
             </objects>
             <point key="canvasLocation" x="653" y="-834"/>
         </scene>
-        <!--Feed Table View Controller - Foodies-->
+        <!--Feed Table View Controller-->
         <scene sceneID="f3w-DT-3q9">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Aba-Ws-kcg" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController id="pcX-xW-n83" customClass="FeedTableViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="279" sectionHeaderHeight="22" sectionFooterHeight="22" id="Pk8-yO-zjP">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="feedCell" rowHeight="320" id="HOz-Dp-n3z" customClass="FeedTableViewCell">
-                                <rect key="frame" x="0.0" y="86" width="320" height="320"/>
+                                <rect key="frame" x="0.0" y="22" width="320" height="320"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="HOz-Dp-n3z" id="oHm-qZ-vQy">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="320"/>
@@ -586,7 +586,7 @@
                             <outlet property="delegate" destination="pcX-xW-n83" id="EbV-UL-WU3"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Foodies" id="l4h-II-YWZ"/>
+                    <navigationItem key="navigationItem" id="l4h-II-YWZ"/>
                 </tableViewController>
             </objects>
             <point key="canvasLocation" x="1142" y="-834"/>
@@ -689,7 +689,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="11B742CB-CC71-470A-A49A-99B8AFCB0F27" width="30" height="30">
+        <image name="F8F9DC4E-448A-432E-AE21-265903E566CB" width="30" height="30">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPD1YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK0HCBMU
 GR4fJSYtMDY5VSRudWxs1QkKCwwNDg8QERJWTlNTaXplViRjbGFzc1xOU0ltYWdlRmxhZ3NWTlNSZXBz
@@ -708,7 +708,7 @@ OgI9Ak8CUgJXAAAAAAAAAgEAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAlk
         </image>
         <image name="integrated_webcam-32.png" width="32" height="32"/>
         <image name="search-32.png" width="32" height="32"/>
-        <image name="star-32.png" width="32" height="32"/>
+        <image name="star-32.png" width="30" height="30"/>
         <image name="user_male4-32.png" width="32" height="32"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
