--- a/Foodies/Foodies/Base.lproj/Main_iPhone.storyboard
+++ b/Foodies/Foodies/Base.lproj/Main_iPhone.storyboard
@@ -131,7 +131,9 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Take a Photo" id="BY8-5G-u6c"/>
+                    <navigationItem key="navigationItem" title="Take a Photo" id="BY8-5G-u6c">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="1YE-wj-Ucj"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="albumCollectionView" destination="Eks-qO-ql4" id="3V0-UD-YLh"/>
                         <outlet property="cancelButton" destination="HR2-gq-ve7" id="FwK-cz-l0e"/>
@@ -259,7 +261,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IFI-CF-QTe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2132" y="1249"/>
+            <point key="canvasLocation" x="2144" y="1249"/>
         </scene>
         <!--Location Picker Table View Controller - Locations-->
         <scene sceneID="ubp-fi-Jg8">
@@ -270,7 +272,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Find or create a location" id="iWB-OH-Vpb">
-                            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                            <rect key="frame" x="0.0" y="64" width="320" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <textInputTraits key="textInputTraits"/>
                             <connections>
@@ -279,7 +281,7 @@
                         </searchBar>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="resultCell" textLabel="P3r-23-afq" detailTextLabel="zi8-ed-PSC" style="IBUITableViewCellStyleSubtitle" id="MNg-Br-Yeq">
-                                <rect key="frame" x="0.0" y="66" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="130" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="MNg-Br-Yeq" id="LpV-NP-pjj">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -493,7 +495,7 @@
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0qi-Xw-bHH" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="gZa-3l-4P7" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Feed" image="F8F9DC4E-448A-432E-AE21-265903E566CB" id="Mqs-XK-zNN"/>
+                    <tabBarItem key="tabBarItem" title="Feed" image="574E00AB-B7CF-49CB-B243-EF10ED6D5958" id="Mqs-XK-zNN"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="NSi-s2-Gmj" customClass="GTScrollNavigationBar">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -689,7 +691,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="F8F9DC4E-448A-432E-AE21-265903E566CB" width="30" height="30">
+        <image name="574E00AB-B7CF-49CB-B243-EF10ED6D5958" width="30" height="30">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPD1YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK0HCBMU
 GR4fJSYtMDY5VSRudWxs1QkKCwwNDg8QERJWTlNTaXplViRjbGFzc1xOU0ltYWdlRmxhZ3NWTlNSZXBz
