--- a/Foodies/Foodies/Base.lproj/Main_iPhone.storyboard
+++ b/Foodies/Foodies/Base.lproj/Main_iPhone.storyboard
@@ -218,7 +218,7 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="NiM-j1-ZuF" kind="modal" identifier="locationSegue" id="5pt-l8-WPo"/>
+                                            <segue destination="BY5-Ki-EID" kind="push" identifier="locationSegue" id="DCC-bT-e2q"/>
                                         </connections>
                                     </tableViewCell>
                                 </cells>
@@ -331,13 +331,7 @@
                             <outlet property="delegate" destination="BY5-Ki-EID" id="zbI-ND-2s5"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Locations" id="tph-8G-nc4">
-                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="gFe-qu-ABN">
-                            <connections>
-                                <action selector="cancelTapped:" destination="BY5-Ki-EID" id="tMH-UO-FI6"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Locations" id="tph-8G-nc4"/>
                     <connections>
                         <outlet property="LocationSearchBar" destination="iWB-OH-Vpb" id="Yo2-M1-fLK"/>
                         <outlet property="searchDisplayController" destination="CcH-TN-Qqz" id="oqD-7d-Kau"/>
@@ -354,7 +348,7 @@
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="3059" y="907"/>
+            <point key="canvasLocation" x="2743" y="975"/>
         </scene>
         <!--Second View Controller - Second-->
         <scene sceneID="ot8-2e-RuS">
@@ -622,25 +616,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Aba-Ws-kcg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1142" y="-834"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="x4K-dg-uka">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="NiM-j1-ZuF" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationItem key="navigationItem" id="7an-wj-vG2"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Jwy-QN-ubK">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="BY5-Ki-EID" kind="relationship" relationship="rootViewController" id="3Xi-Qo-91u"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ER6-7R-wdH" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2612" y="907"/>
         </scene>
         <!--Sign Up View Controller-->
         <scene sceneID="PHc-ei-GTw">
